tests/invalid/type/arity_string_concat_too_many.pts
import Io;

function main() : void {
    string s = "a".concat("b", "c");
}
